fix: 💄 improve the color contrasts in index.html

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ section .container {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: white;
 }
 
 .d-bloc .a-btn:hover,
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #333!important;
 }
 
 .container {
@@ -1062,3 +1062,8 @@ input:invalid {
 textarea:invalid {
     border-right: #F3976C solid 3px;
 }
+
+blockquote {
+    border: none;
+}
+
